Release 1 (#9)
* Feature/horaio execao (#1)

* criado a tabela de exeção de trabalho do barbeiro

* criado a estrutura referente a exeção de trabalho e aletarado os json das outras estruturas

* criado funções que atualizam o status da reserva parendente e criado a consulta que cria a exeção de trabalho

* Altearado todas as variaveis de data para o portugues nas estruturas

* Adicionado coluna de data_suspensao na tabela de reservaws

* ajustado as funções de criar horario de execção e de listagem de reservas

* Modificação no modulo de reserva

* Update reservation (#2)

* criado função para atualizar reserva

* ajustado o modulo de reserva retirando a coluna de duração e movendo para a tabela de serviço

* Feature/add swag (#3)

* Criado a documentação do swagger do modulo de clientes

* Criado a documentação do swagger do modulo de barbeiros

* Criado a documentação do swagger do modulo de serviços

* Criado a documentação do swagger do modulo de barbearia

* Criado a documentação do swagger do modulo de horario de trabalho e exeção de trabalho

* Criado a documentação do swagger do modulo de reservas

* Ajustes realizados no modulo de reservas e adicionado a documentação swagger na rota de listagem

* Feature/add swag (#5)

* Criado a documentação do swagger do modulo de clientes

* Criado a documentação do swagger do modulo de barbeiros

* Criado a documentação do swagger do modulo de serviços

* Criado a documentação do swagger do modulo de barbearia

* Criado a documentação do swagger do modulo de horario de trabalho e exeção de trabalho

* Criado a documentação do swagger do modulo de reservas

* Ajustes realizados no modulo de reservas e adicionado a documentação swagger na rota de listagem

* Adicionado a configuração de variso ambientes de senvolvimento

* Feature/add list execao (#7)

* feat: adicionado metodo que liste as horas de exeção do barbeiro

* refector: refatorado o metodo que atualiz
