# docs/swagger.yaml
@@ -99,26 +99,8 @@ definitions:
       rua:
         type: string
     type: object
-  client.CreateClient:
-    properties:
-      contato:
-        type: string
-      email:
-        type: string
-      nome:
-        type: string
-      senha:
-        type: string
-    required:
-    - contato
-    - email
-    - nome
-    - senha
-    type: object
   client.ListClients:
     properties:
-      contato:
-        type: string
       data_atualizacao:
         type: string
       data_criacao:
@@ -276,26 +258,6 @@ paths:
       summary: Lista todas as barbearias
       tags:
       - barberShop
-  /barber/client/create:
-    post:
-      consumes:
-      - application/json
-      description: Cria um novo cliente
-      parameters:
-      - description: Create client
-        in: body
-        name: client
-        required: true
-        schema:
-          $ref: '#/definitions/client.CreateClient'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Sem conteúdo
-      summary: Create client
-      tags:
-      - client
   /barber/client/list:
     get:
       consumes:
@@ -388,6 +350,25 @@ paths:
         "200":
           description: Sem conteúdo
       summary: Criação de exceções de hora de trabalho para o barbearia
+      tags:
+      - hoursBarber
+  /barber/hoursBarberException/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Remove uma exceção de hora de trabalho para o barbeiro
+      parameters:
+      - description: Exception ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Barber hours exception deleted successfully
+      summary: Remoção de exceção de hora de trabalho
       tags:
       - hoursBarber
   /barber/list:
